--- a/src/_blocks/hero/hero.astro
+++ b/src/_blocks/hero/hero.astro
@@ -1,8 +1,7 @@
 <section id="hero">
   <div class="hero-container">
-    <h1 class="hero-title">Creative Real Estate Agency</h1>
-    <p>Spanty is an international estate company that offers services like propery appraisal as well as the sale, purchase,
-      and investment of real estate.</p>
+    <h1 class="hero-title">Для заказа с сайта fl.ru</h1>
+    <p>Это лишь пример, каркас. По изменению дизайна можем договориться, или сделать вообще новый</p>
     <div class="hero-data">
       <form id="heroFilter">
         <div class="hero-filter__item">
